# MentorAI

./: .gitignore  PROJECT_OVERVIEW.md  README.md  TODO_MVP.md
backend/: .env.example  pyproject.toml  run.py
backend/src/mentorai/: main.py
frontend/: package.json
infrastructure/: README.md
infrastructure/database/: init.sql
infrastructure/docker/: docker-compose.yml  start-services.sh
