[project]
name = "mentorai"
version = "0.1.0"
description = ""
authors = [
    {name = "ddqlpajama",email = "ddqlpajama@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "python-multipart>=0.0.9,<0.1.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "chromadb>=0.4.0,<0.5.0",
    "pymupdf>=1.23.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[tool.poetry]
packages = [{include = "mentorai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
